# MySales

./: .gitignore  Dockerfile  Docketfile  README.md  nixpacks.toml  pyproject.toml  server.py
app/: cgi_script.py
app/cgi-bin/: cgi_script.py
app/cgi-bin/config/: utils.py
app/cgi-bin/handlers/: create.py  (+4 more)
app/config/: utils.py
app/data/: MySales.db  insert_secondary.csv
app/handlers/: fetch_data.py  primary_sales.py
cgi-bin/: cgi_script.py
cgi-bin/config/: config_helper.py  utils.py
cgi-bin/handlers/: create.py  fetch_data.py  handler_helper.py  primary_sales.py  secondary_sales.py  sqlite.py
css/: index.css
data/: insert_primary.csv
data/databases/: MySales.db  MySales.sqbpro
data/files/: gst_details.csv
html/: fetch_data.html  index.html  primary_sales.html  secondary_sales.html  under_construction.html
js/: index.js  script.js
mysales/: __init__.py  cgi_script.py
mysales/config/: const.py  dev.py  prod.py
mysales/extensions/: auth.py
mysales/forms/: auth.py  forms.py
mysales/handlers/: fetch_data.py
mysales/models/: __init__.py  auth.py  models.py
mysales/routes/: __init__.py
mysales/utils/: api.py  cache.py  fetch_data.py  logger.py  models.py  utils.py
source/: __init__.py  cgi_script.py
source/handlers/: fetch_data.py  primary_sales.py  sqlite.py
static/css/: index.css  main.css  style.css
static/js/: script.js
templates/: base.html  base_bkp.html
templates/auth/: login.html  register.html
templates/pages/: fetch_report.html  index.html  primary_sales.html  secondary_sales.html  under_construction.html
(+3 files in other folders)
