[tool.poetry]
name = "mysales"
version = "2.0"
description = "Insert Primary and Secondary sales data and also fetch sales data month wise."
authors = ["IshaanK <kothidarishaan11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.2"
et-xmlfile = "^1.1.0"
flask = "^3.0.3"
setuptools = "^70.0.0"
python-dotenv = "^1.0.1"
flask-cors = "^4.0.1"
flask-login = "^0.6.3"
flask-bcrypt = "^1.0.1"
flask-limiter = "^3.7.0"
flask-caching = "^2.3.0"
flask-sqlalchemy = "^3.1.1"
black = "^24.4.2"
email-validator = "^2.1.1"
werkzeug = "^3.0.3"
flask-wtf = "^1.2.1"
gunicorn = "^22.0.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
